--- a/src/home.html
+++ b/src/home.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="assets/css/home.css"/>
+    <link rel="stylesheet" href="assets/css/home.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <img src="assets/img/saida.png" />
         </span>
         <nav class="navheader">
-            <a href="cadastro.html">Cadastre-se</a>
+            <a href="cadastrousuario.html">Cadastre-se</a>
             <a href="login.html">Login</a>
         </nav>
     </header>
@@ -22,17 +23,26 @@
         <div class="textohome">
             <span id="text">
                 <h1>A TODES é a plataforma feita pra você jovem LGBTQIA+ que quer ingressar no mercado de trabalho</h1>
-                <h2>Faça parte do projeto</h2>
             </span>
             <span id="loginhome">
-                <a href="cadastro.html">Venha se cadastrar</a>
-                <a href="cadastro.html">Cadastre sua empresa</a>
+                <h2>Faça parte do projeto</h2>  
+                <a href="cadastrousuario.html">Venha se cadastrar</a>
+                <a href="cadastroempresa.html">Cadastre sua empresa</a>
+            </span>
+            <span id="anuncievagas">
+                <h1>Anuncie sua vaga</h1>
+                <h2><a href="#">Anuncie uma vaga</a></h2>
             </span>
         </div>
         <div class="imghome">
             <img src="assets/img/Team-bro.png" />
         </div>
     </main>
+    <footer>
+        <div class="logofooter">
+            <img src="assets/img/saida.png">
+        </div>
+    </footer>
 </body>
 
 </html>
