tela de cadastro

--- a/src/home.html
+++ b/src/home.html
@@ -20,23 +20,26 @@
         </nav>
     </header>
     <main>
-        <div class="textohome">
-            <span id="text">
-                <h1>A TODES é a plataforma feita pra você jovem LGBTQIA+ que quer ingressar no mercado de trabalho</h1>
-            </span>
-            <span id="loginhome">
-                <h2>Faça parte do projeto</h2>  
-                <a href="cadastrousuario.html">Venha se cadastrar</a>
-                <a href="cadastroempresa.html">Cadastre sua empresa</a>
-            </span>
-            <span id="anuncievagas">
-                <h1>Anuncie sua vaga</h1>
-                <h2><a href="#">Anuncie uma vaga</a></h2>
-            </span>
-        </div>
-        <div class="imghome">
-            <img src="assets/img/Team-bro.png" />
-        </div>
+        <section class="content1">
+            <div class="textohome">
+                <span id="text">
+                    <h1>A TODES é a plataforma feita pra você jovem LGBTQIA+ que quer ingressar no mercado de trabalho
+                    </h1>
+                </span>
+                <span id="loginhome">
+                    <h2>Faça parte do projeto</h2>
+                    <a href="cadastrousuario.html">Venha se cadastrar</a>
+                    <a href="cadastroempresa.html">Cadastre sua empresa</a>
+                </span>
+                <span id="anuncievagas">
+                    <h1>Anuncie sua vaga</h1>
+                    <h2><a href="#">Anuncie uma vaga</a></h2>
+                </span>
+            </div>
+            <div class="imghome">
+                <img src="assets/img/Team-bro.png" />
+            </div>
+        </section>
     </main>
     <footer>
         <div class="logofooter">
