--- a/src/login.html
+++ b/src/login.html
@@ -11,9 +11,10 @@
 
 <body>
     <main>
-        <div class="login">
+        <section class="telalogin">
             <div class="inputs">
                 <span id="textlogin">
+                    <a href="home.html"><img src="assets/img/saida.png"/></a>
                     <h2>Faça seu login</h2>
                     <h5>Faça seu login e use a nossa plataforma</h5>
                 </span>
@@ -27,9 +28,7 @@
             <div class="imagemlogin">
                 <img src="assets/img/Team work-amico.png" </div>
             </div>
-        </div>
-
-
+        </section>
     </main>
 </body>
 
