--- a/src/login.html
+++ b/src/login.html
@@ -7,6 +7,7 @@
     <title>Faça seu Login</title>
     <link rel="stylesheet" href="assets/css/login.css">
     <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
 </head>
 
 <body>
@@ -19,8 +20,9 @@
                     <h5>Faça seu login e use a nossa plataforma</h5>
                 </span>
                 <span id="inputlogin">
-                    <input type="email" id="emaillogin" placeholder="Insira seu email">
-                    <input type="password" id="passwordlogin" placeholder="Insira sua senha">
+                    <input type="email" id="email" placeholder="Insira seu email" required>
+                    <input type="password" id="password" placeholder="Insira sua senha" required>
+                    <a class="olhoSenha" href="#"><img src="assets/img/icones de interface/olho.png"/></a>
                     <button id="validlogin">Login</button>
                     <a href="cadastrousuario.html">Não possuí cadastro? Cadastre-se</a>
                 </span>
@@ -30,6 +32,7 @@
             </div>
         </section>
     </main>
+    <script src="assets/script/login.js"></script>
 </body>
 
 </html>
