--- a/src/cadastrousuario.html
+++ b/src/cadastrousuario.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
-    <link rel="stylesheet" href="assets/css/cadastrousuario.css"/>
+    <link rel="stylesheet" href="assets/css/cadastrousuario.css" />
 </head>
+
 <body>
     <main>
         <section class="telacadastro">
             <div class="tituloelogo">
-                <a href="home.html"><img src="assets/img/saida.png"/></a>
+                <a href="home.html"><img src="assets/img/saida.png" /></a>
                 <h2>Formulário de Cadastro de Usuário</h2>
                 <h2 id="hiddentext">Cadastro de Usuário</h2>
             </div>
             <div class="inputs">
-                <input type="text" id="nome" placeholder="Nome Completo"  required>
-                <p id="mensagemErroNome">Insira um nome válido</p>
+                <div id="msgError"></div>
+                <div id="msgSucess"></div>
+                <input type="text" id="nome" placeholder="Nome Completo" required>
                 <input type="email" id="email" placeholder="Insira um email" required>
                 <input type="email" id="confirmEmail" placeholder="Confirme o email" required>
                 <input type="password" id="password" placeholder="Senha (Minimo 8 e Máximo 16 caracteres)" required>
-                <a class="olhoSenha" href="#"><img src="assets/img/icones de interface/olho.png"/></a>
+                <a class="olhoSenha" href="#"><img src="assets/img/icones de interface/olho.png" /></a>
                 <input type="password" id="confirmPassword" placeholder="Confirme a senha" required>
-                <a class="olhoSenha2" href="#"><img src="assets/img/icones de interface/olho.png"/></a>
+                <a class="olhoSenha2" href="#"><img src="assets/img/icones de interface/olho.png" /></a>
                 <input type="date" id="datadenascimento" required>
                 <input type="text" id="genero" placeholder="Informe seu gênero" required>
-                <input type="text" id="telefone" placeholder="Número de Celular (99) 99999-9999" required> 
+                <input type="text" id="telefone" placeholder="Número de Celular (99) 99999-9999" required>
                 <input type="text" id="cpf" placeholder="CPF" required>
                 <select id="formação" name="Formação Acadêmica" required>
                     <option value="invalid">Selecione uma opção</option>
@@ -35,16 +38,17 @@
                     <option value="valor4">Ensino Médio Completo</option>
                     <option value="valor5">Ensino Superior Completo</option>
                 </select>
-                <button onclick="cadastrar()" id="cadastrar">Cadastrar</button>       
+                <button onclick="cadastrar()" id="cadastrar">Cadastrar</button>
             </div>
             <span class="links">
                 <a href="login.html">Já é cadastrado? Faça seu login</a>
-                <a id="responsividade"href="login.html">Faça seu login</a>
-            <a href="cadastroempresa.html">Quer Cadastrar sua Empresa? Clique Aqui</a>
-            <a id="responsividade2" href="cadastroempresa.html">Cadastre sua empresa</a>
+                <a id="responsividade" href="login.html">Faça seu login</a>
+                <a href="cadastroempresa.html">Quer Cadastrar sua Empresa? Clique Aqui</a>
+                <a id="responsividade2" href="cadastroempresa.html">Cadastre sua empresa</a>
             </span>
         </section>
     </main>
     <script src="assets/script/cadastrousuario.js"></script>
 </body>
+
 </html>
