login quase finalizado

--- a/src/feed.html
+++ b/src/feed.html
@@ -36,9 +36,13 @@
             <div class="adicionarPost">
                 <span class="imgPost">
                     <a href="paginaUsuario.html"><img src="assets/img/icones de interface/do-utilizador (2).png"/></a>
+                    <span id="nomeLogado"></span>
                 </span>
                 <span class="inputPost">
-                    <textarea id="contentPost"></textarea>
+                    <input id="conteudoPost" type="text">
+                </span>
+                <span class="btnInterface">
+                    <button id="postar">Post</button>
                 </span>
             </div>
             <div class="posts">
