--- a/src/home.html
+++ b/src/home.html
@@ -33,7 +33,7 @@
                 </span>
                 <span id="anuncievagas">
                     <h1>Anuncie sua vaga</h1>
-                    <h2><a href="#">Anuncie uma vaga</a></h2>
+                    <h2><a href="vagasEmpresas.html">Anuncie uma vaga</a></h2>
                 </span>
             </div>
             <div class="imghome">
