--- a/src/feed.html
+++ b/src/feed.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed Inicial</title>
-    <link rel="stylesheet" href="assets/css/feed.css"/>
-    <link rel="stylesheet" href="assets/css/global.css"/>
+    <link rel="stylesheet" href="assets/css/feed.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
 </head>
+
 <body>
     <header>
         <span>
@@ -18,24 +20,24 @@
             <a href="pessoas.html">Pessoas</a>
             <div class="userDrop">
                 <button class="Userdropbtn">
-                <img src="assets/img/icones de interface/do-utilizador (2).png"/>
+                    <img src="assets/img/icones de interface/do-utilizador (2).png" />
                 </button>
                 <div class="userDropdown-content">
-                  <button onclick="selecionarPerfil()" id="selectPerfil">Perfil</button>
-                  <button onclick="logout()"id="btnLogout">Logout</button>
+                    <button onclick="selecionarPerfil()" id="selectPerfil">Perfil</button>
+                    <button onclick="logout()" id="btnLogout">Logout</button>
                 </div>
-              </div>
+            </div>
         </nav>
     </header>
     <main>
         <div class="searchPosts">
-        <input id='pesquisarInput' type="search"/>
-        <button id="pesquisarBtn"><img src="assets/img/icones de interface/procurar.png"</button>
+            <input id='pesquisarInput' type="search" />
+            <button id="pesquisarBtn"><img src="assets/img/icones de interface/procurar.png" </button>
         </div>
         <div class="painelPosts">
             <div class="adicionarPost">
                 <span class="imgPost">
-                    <a id ="avatarInputPost"><img src="assets/img/icones de interface/do-utilizador (2).png"/></a>
+                    <a id="avatarInputPost"><img src="assets/img/icones de interface/do-utilizador (2).png" /></a>
                     <span id="nomeLogado"></span>
                 </span>
                 <span class="inputPost">
@@ -47,10 +49,6 @@
                 </span>
             </div>
             <div class="posts">
-                <div class="post1">
-                    <div class="autorPost"></div>
-                    <div class="conteudoDoPost"></div>
-                </div>
             </div>
         </div>
     </main>
@@ -69,5 +67,10 @@
 
 
     <script src="assets/script/feed.js"></script>
+    <script src="https://kit.fontawesome.com/7aabcce838.js"></script>
 </body>
+
 </html>
+
+<!--                         <button class="btnLike"><i class="fa-regular fa-heart"></i></button>
+                        <button class="btnDelete"><i class="fa-solid fa-trash"></i></button> -->
