versão complete do site

--- a/src/paginaUsuario.html
+++ b/src/paginaUsuario.html
@@ -17,8 +17,8 @@
                 </div>
                 <div class="backStart">
                     <a href="feed.html">Feed</a>
-                    <a href="feed.html">Pessoas</a>
-                    <a href="feed.html">Vagas</a>
+                    <a href="pessoas.html">Pessoas</a>
+                    <a href="vagasUsuarios.html">Vagas</a>
                 </div>
                 <div class="logout">
                     <button onclick="logout()" id="logout">Logout</button>
